# packscript

./: .editorconfig  .gitignore  Cargo.toml  README.md  design.adoc  project.json  roadmap.md  scripting.txt  scripting_bnf.txt  testrun  todo.adoc
app/: Cargo.toml  build.lua
app/docs/: functions.html  grammar.adoc  types.adoc  types.html
app/src/: main.rs  stdlib.rs  types.rs
core/: Cargo.toml  README.md
core/docs/: functions.adoc  getting_started.adoc  objects.html  variables.adoc
core/lualib/: core.lua  ops.lua  shell.lua
core/src/: lib.rs  utils.rs
core/src/builtin/: compress.rs  core.rs  crypto.rs  curl.rs  glob.rs  graph.rs  harden.rs  mod.rs  native.rs  net.rs  path.rs  regex.rs  serializer.rs  shell.rs
docs/: arith.txt  example_script.pksc  grammar.adoc  objects.adoc  scripting_bnf.txt  syntax_overview.adoc  syntax_overview.html  types.adoc
lualib/: core.lua  ops.lua  shell.lua
macros/: Cargo.toml  README.md
macros/src/: lib.rs
pksc/: Cargo.toml  README.md  build.lua  robots.txt
pksc/src/: main.rs  utils.rs
pksc/test/: build.lua
pksc/test/.pksc/: cJSON.tmp
pksc/test/src/: main.c
pksc/test/tmp/: build.lua
src/: iterator.c3  lexer.c3  main.c3  parser.c3  utils.c3
src/error/: error.c3
src/errors/: generator.c3
src/utils/: error.c3  fileiter.c3  iterator.c3  option.c3  result.c3  ringiter.c3  tree.c3  tunion.c3  utils.c3
test/: lexer.c3  parser.c3
test/utils/: iterator.c3
