[package]
name = "packscript"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish = false
[dependencies]
anyhow = "1.0.95"
flate2 = "1.0.35"
glob = "0.3.2"
include_dir = "0.7.4"
inventory = "0.3.17"
macros = { version = "0.1.0", path = "../macros" }
mlua = { version = "0.10.2", features = ["anyhow", "async", "luajit", "send", "serialize", "vendored"] }
once_cell = "1.20.2"
onig = {version = "6.4.0", default-features = false}
petgraph = { version = "0.7.1", features = ["rayon"] }
rayon = "1.10.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.135"
serde_yml = "0.0.12"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
toml = "0.8.19"
zip = "2.2.2"
