[package]
name = "pksc_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
[dependencies]
adler = "1.0.2"
adler32fast = "1.1.0"
anyhow = "1.0.95"
crc32fast = "1.4.2"
digest = "0.10.7"
flate2 = "1.0.35"
glob = "0.3.2"
hex = "0.4.3"
include_dir = "0.7.4"
inventory = "0.3.17"
pksc_macros = { version = "0.1.0", path = "../macros" }
md-5 = "0.10.6"
mlua = { version = "0.10.2", features = ["anyhow", "async", "luajit", "send", "serialize", "vendored"] }
once_cell = "1.20.2"
onig = {version = "6.4.0", default-features = false}
petgraph = { version = "0.7.1", features = [] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_ini = "0.2.0"
serde_json = "1.0.135"
serde_yml = "0.0.12"
sha2 = "0.10.8"
sha3 = "0.10.8"
tar = "0.4.43"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = "2.5.0"
toml = "0.8.19"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zip = "2.2.2"
futures-util = "0.3.31"
indicatif = "0.17.11"
