[package]
name = "pksc_macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
[lib]
proc-macro = true

[dependencies]
inventory = "0.3.17"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full"] }
