[package]
name = "pksc"
version.workspace = true
authors.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
pksc_core = { version = "0.1.0", path = "../core" }
